# Terminal-Game-Engine

./: .gitignore  CMakeLists.txt  README  README.md  format.json
EngineCore/: CMakeLists.txt
EngineCore/Include/: export.hpp  game.hpp  gameTypes.hpp  print.hpp  serialization.hpp  utils.hpp
EngineCore/src/: game.cpp  print.cpp  serialization.cpp  utils.cpp
EngineGUI/: CMakeLists.txt
EngineGUI/Include/: editorNodeSpawner.hpp  editorTypes.hpp  editorUtils.hpp  parser.hpp
EngineGUI/src/: editorNodeSpawner.cpp  editorUtils.cpp  main.cpp  parser.cpp
EngineRunner/: CMakeLists.txt
EngineRunner/src/: main.cpp
